--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /.vs
 /Project_Server/x64
-/Project_Client/x64
 /Project_Server/.vs
+/Project_Server/v15
+/Project_Client/x64
 /Project_Client/.vs
+/Project_Server/v15
 *.exe
 *.ilk
 *.pdb
@@ -14,3 +16,6 @@
 *.lastbuildstate
 *.suo
 *.db
+*.ipch
+*.iobj
+*.ipdb
